--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -19,6 +19,13 @@ html(lang="en")
                         .role
                             p Data Engineering, Backend &amp; DevOps
                     .r
+                        .quick-connect
+                            a(href='mailto:aroraabhay@icloud.com')
+                                img(src='assets/img/mail.png')
+                                | aroraabhay@icloud.com
+                            a(href='tel:+919478478470')
+                                img(src='assets/img/call.png')
+                                | (+91) 9 478 478 470
                         .intro.fw.fl
                             ul.journey
                                 li
@@ -33,17 +40,15 @@ html(lang="en")
                                     .milestone Your Team
                             p My idea of profession is to work for my passion. My passion for innovation, passion for technology, and yes passion for business co-define the terms on which I live.
 
-
-
                 .split.fw.fl
                     
                     .split-left.fl
                         
                         section#skills.section
-                            h3.head Inventory
+                            h3.head Technical Skills
                             .content
                                 .sub-section
-                                    span.title Languages
+                                    span.title Language
                                     ul.tags
                                         li.pro Python
                                         li.int Golang
@@ -51,82 +56,56 @@ html(lang="en")
                                         li.int Javascript
                                         li C
                                 .sub-section
-                                    span.title Framework & Utility
+                                    span.title Framework &amp; Utility
                                     ul.tags
-                                        li Flask
-                                        li Hadoop
-                                        li Spark
-                                        li Scrapy
-                                        li RabbitMQ
-                                        li Kafka
-                                        li Storm
-                                        li Angular.js
-                                        li D3.js
+                                        li.pro Spark
+                                        li Apache Beam
+                                        li.int Hadoop
+                                        li.int Kafka
+                                        li.pro Scrapy
                                         li React.js
-                                        li Tensorflow
-                                        li OpenCV
-                                        li Ethereum
-                                        li Hyperledger
+                                        li.pro Flask
+                                        li D3.js
                                 .sub-section
-                                    span.title Storage & Search
+                                    span.title Storage &amp; Search
                                     ul.tags
-                                        li MongoDB
-                                        li MySQL
-                                        li PostgreSQL
-                                        li HDFS
-                                        li Titan DB
-                                        li Elasticsearch
+                                        li.pro PostgreSQL
+                                        li.int Elasticsearch
+                                        li.int BigQuery
+                                        li.pro MongoDB
+                                        li.pro MySQL
+                                        li.pro HBase
                                         li SolR
-                                        li HBase
-                                        li Cassandra
-                                        li Neo4J
+                                        li TitanDB
                                 .sub-section
-                                    span.title Workflow & Deployment
+                                    span.title Workflow &amp; Infrastructure
                                     ul.tags
-                                        li Lambda
-                                        li Serverless
-                                        li Docker
-                                        li Openstack
-                                        li AWS
+                                        li.int Docker
+                                        li.pro Google Cloud
+                                        li Kubernetes
+                                        li.pro Ansible
                                         li Jenkins
-                                        li Git
+                                        li.pro Git
+                                        li.int AWS
                                         li Slack
                                         li Shell Scripting
-                                        li Taiga
                                         li JIRA
-                                        li Kubernetes
-                                        li GitLab
                         
                         section#interests.section
                             h3.head Areas of Interest
                             .content
-                                .sub-section
-                                    span.title Languages
+                                #interests-chart
+                                .interests
                                     ul.tags
-                                        li.pro Python
-                                        li.int Golang
-                                        li Scala
-                                        li.int Javascript
-                                        li C
-
-                        section#contact.section
-                            h3.head Get in Touch
-                            .content
-                                .sub-section
-                                    span.title Languages
-                                    ul.tags
-                                        li.pro Python
-                                        li.int Golang
-                                        li Scala
-                                        li.int Javascript
-                                        li C
-
-                            .foot There's an issue
+                                        li.pro Blockchain
+                                        li.int Smart Contracts
+                                        li Bots & AI
+                                        li.pro IoT Solutions
 
                     .split-right.fl
 
-                        section#contact.section.wb
-                            h3.head Experience
+                        section#experience.section.wb
+                            h3.head Work History
                             .content
                                 .timeline
                                     .row
@@ -135,79 +114,103 @@ html(lang="en")
                                             .td Data Engineer
                                             .loc Bengaluru, IN
                                         .event
-                                            .e Datalicious Pty. Ltd. (An Equifax company)
-                                            .ec My idea of profession is to work for my passion. My passion for innovation, passion for technology, and yes passion for business co-define the terms on which I live
+                                            .e Datalicious Pty. Ltd.
+                                            .ec Datalicious offers various products and services in  marketing attribution, web analytics and data science. My job here is to build, administer and scale data collector and data pipelines that capture and process millions of events a day.
                                             ul.tags
-                                                li ETL
-                                                li Media Attribution
-                                                li Data Pipelines
+                                                li.pro Google Dataflow
+                                                li.int Apache Beam
+                                                li.pro BigQuery
+                                                li Kubernetes
+                                                li.int Docker
+                                                li.int Golang
+                                                li.pro Python
+                                                li Ansible
                                     .row
                                         .time
-                                            .t Oct'17 - Present
-                                            .td Data Engineer
-                                            .loc Bengaluru, IN
+                                            .t Oct'16 - Oct'17
+                                            .td System Engineer
+                                            .loc Trivandrum, IN
                                         .event
-                                            .e Datalicious Pty. Ltd. (An Equifax company)
-                                            .ec My idea of profession is to work for my passion. My passion for innovation, passion for technology, and yes passion for business co-define the terms on which I live
+                                            .e Infosys Ltd.
+                                            .ec Developed physical network inventory and network analysis tools to validate network designs before construction. Saved millions by avoiding construction or design failures.
                                             ul.tags
-                                                li ETL
-                                                li Media Attribution
-                                                li Data Pipelines
+                                                li.int AutoCAD
+                                                li.pro GML
+                                                li.int MapInfo
+                                                li.pro Google Maps
+                                                li.pro Python
+                                                li.int Javascript
+                                                li Oracle DB
+                                                li.int GeoJSON
+                                                li Neo4J
                                     .row
                                         .time
-                                            .t Oct'17 - Present
-                                            .td Data Engineer
-                                            .loc Bengaluru, IN
+                                            .t May'14 - Oct'16
+                                            .td
+                                                | Co-founder
+                                                br
+                                                | Lead Tech.
+                                            .loc Chandigarh, IN
                                         .event
-                                            .e Datalicious Pty. Ltd. (An Equifax company)
-                                            .ec My idea of profession is to work for my passion. My passion for innovation, passion for technology, and yes passion for business co-define the terms on which I live
+                                            .e XenonStack Pvt. Ltd.
+                                            .ec We collaborated to serve our first client; a telecom provider for analysing call data records in real-time and optimize billing components. Later, I lead the team as an architect for big data solutions.
                                             ul.tags
-                                                li ETL
-                                                li Media Attribution
-                                                li Data Pipelines
+                                                li.pro ETL
+                                                li.pro Spark
+                                                li.int Hadoop
+                                                li.int Kafka
+                                                li RabbitMQ
+                                                li.pro PostgreSQL
+                                                li.pro HBase
+                                                li.int Elasticsearch
+                                                li SolR
+                                                li Scala
+                                                li.pro Scrapy
                                     .row
                                         .time
-                                            .t Oct'17 - Present
-                                            .td Data Engineer
-                                            .loc Bengaluru, IN
-                                        .event
-                                            .e Datalicious Pty. Ltd. (An Equifax company)
-                                            .ec My idea of profession is to work for my passion. My passion for innovation, passion for technology, and yes passion for business co-define the terms on which I live
-                                            ul.tags
-                                                li ETL
-                                                li Media Attribution
-                                                li Data Pipelines
-                            .foot Total 3+ years of experience
-
-                        section#contact.section.wb
-                            h3.head Education
-                            .content
-                                .timeline
-                                    .row
-                                        .time
-                                            .t 2013 - 2016
-                                            .td Bachelor of Technology
-                                            .loc Ludhiana, IN
-                                        .event
-                                            .e Punjab Technical University
-                                            .ec Guru Nanak Dev Engineering College
-                                            ul.tags
-                                                li Computer Science &amp; Engineering
-                                    .row
-                                        .time
-                                            .t 2013 - 2016
-                                            .td Diploma in Engineering
+                                            .t Oct'12 - May'14
+                                            .td Freelancer
                                             .loc Jalandhar, IN
                                         .event
-                                            .e Punjab State Board Of Technical Education
-                                            .ec Mehr Chand Polytechnic College
+                                            .e Freelance Developer
+                                            .ec I started by exploring technologies of the time and working for free at early stage. Finally got my first paid project in 2012. With excellent repeat hire rate; I developed several ERP solutions and online versions for various magazines and newspapers.
                                             ul.tags
-                                                li Computer Engineering
+                                                li Python
+                                                li Flask
+                                                li MySQL
+                                                li AWS
+                                                li PHP
 
-                        section#contact.section.wb
-                            h3.head Contact
+                        section#courses.section
+                            h3.head Courses / Certifications
                             .content
-                                p Some content here
-                            .foot There's an issue
-
-        script(src='assets/js/BzFTMxc.js')
+                                ul.certifications
+                                    li
+                                        b
+                                            | BigData with
+                                            br
+                                            | Apache Spark
+                                        p Udemy UC-IHZ7NSWV
+                                    li
+                                        b 
+                                            | Docker
+                                            br
+                                            | Deep Dive
+                                        p Linux Academy 137690
+                                    li
+                                        b
+                                            | Ansible for
+                                            br
+                                            | Orchestration
+                                        p Linux Academy
+                                    li
+                                        b
+                                            | Machine Learning
+                                            br 
+                                            | with Python
+                                        p Udemy UC-XE5GJLEO
+                           
+        script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/highcharts/5.0.14/highcharts.js')
+        script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/highcharts/5.0.14/highcharts-more.js')
+        script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/highcharts/5.0.14/js/modules/solid-gauge.js')
+        script(src='assets/js/BzFTMxc.min.js')
