--- a/src/less/BzFTMxc.less
+++ b/src/less/BzFTMxc.less
@@ -112,10 +112,10 @@ html, body{
 
     .intro {
 	text-align: right;
-	padding: 20px 0px;
+	padding: 10px 0px;
 
 	@media print{
-	    padding: 15px 0px;
+	    padding: 5px 0px;
 	}
 
 	p {
@@ -123,9 +123,34 @@ html, body{
 	    font-style: italic;
 	    font-weight: 300;
 	    color: #CCC;
+
+	    @media print {
+		padding-top: 10px;
+	    }
 	}
     }
 
+    .quick-connect{
+	text-align: right;
+	
+	a {
+	    font-size: 9pt;
+	    line-height: 30px;
+	    text-decoration: none;;
+	    margin: 0px 10px;
+	    color: #999;
+
+	    img{
+		height: 13px;
+		margin-right: 5px;
+	    }
+
+	    &:hover{
+		color: #000;
+		text-decoration: underline;
+	    }
+	}
+    }
 
     .role{
 	padding: 10px 0px;
@@ -147,12 +172,12 @@ html, body{
 .split{
 
     .split-left {
-	width: 33%;
+	width: 28%;
 	padding-right: 2%;
     }
 
     .split-right {
-	width: 62%;
+	width: 67%;
 	padding-left: 2%;
 	border-left: 1px #EEE solid;
     }
@@ -197,14 +222,22 @@ html, body{
     width: 100%;
     padding: 10px 0px;
 
+    @media print{
+	padding: 5px 0px;
+    }
+
     .row{
 	float: left;
 	width: 100%;
 	margin: 10px 0px;
 
+	@media print {
+	    margin: 3px 0px;
+	}
+
 	.time{
 	    float: left;
-	    width: 20%;
+	    width: 21%;
 	    text-align: right;
 
 	    div{
@@ -229,8 +262,8 @@ html, body{
 
 	.event{
 	    float: left;
-	    width: 75%;
-	    padding-left: 5%;
+	    width: 76%;
+	    padding-left: 3%;
 
 	    div{
 		float: left;
@@ -285,10 +318,12 @@ ul.tags{
 .sub-section{
     float: left;
     width: 100%;
-    margin: 10px 0px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     
     @media print{
-	margin: 5px 0px;
+	margin-top: 5px;
+	margin-bottom: 0px;
     }
 	
     .title{
@@ -377,4 +412,33 @@ ul.journey{
 	    }
 	}
     }
+}
+
+ul.certifications{
+    list-style: none;
+    padding: 0px;
+    margin: 20px 0px;
+
+    li {
+	float: left;
+	width: 23%;
+	padding: 1%;
+
+	b {
+	    font-weight: 400;
+	}
+	
+	p{
+	    margin: 0px;
+	    margin-top: 2px;
+	    font-size: 8pt;
+	    font-weight: 300;
+	}
+	
+    }
+}
+
+#interests-chart {
+    float: left;
+    width: 100%;
 }
