Proof read Page 1

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -132,7 +132,7 @@ html(lang="en")
                                             .loc Trivandrum, IN
                                         .event
                                             .e Infosys Ltd.
-                                            .ec Developed physical network inventory and network analysis tools to validate network designs before construction. Saved millions by avoiding construction or design failures.
+                                            .ec Design support group at Infosys developed a physical network inventory and network analysis tools to validate network designs before construction. We saved millions by avoiding any construction or design failures.
                                             ul.tags
                                                 li.int AutoCAD
                                                 li.pro GML
@@ -153,7 +153,7 @@ html(lang="en")
                                             .loc Chandigarh, IN
                                         .event
                                             .e XenonStack Pvt. Ltd.
-                                            .ec We collaborated to serve our first client; a telecom provider for analysing call data records in real-time and optimize billing components. Later, I lead the team as an architect for big data solutions.
+                                            .ec I co-founded a solutions consulting startup and lead the technology team to serve fortune vendors. I played an important role in training the team on new technologies. With conflicting intersts on products and strategy; pertaining from long time; I decided to leave the team for good.
                                             ul.tags
                                                 li.pro ETL
                                                 li.pro Spark
@@ -173,13 +173,13 @@ html(lang="en")
                                             .loc Jalandhar, IN
                                         .event
                                             .e Freelance Developer
-                                            .ec I started by exploring technologies of the time and working for free at early stage. Finally got my first paid project in 2012. With excellent repeat hire rate; I developed several ERP solutions and online versions for various magazines and newspapers.
+                                            .ec I started by exploring technologies of the time and working for free at early stage. Finally got my first paid project in 2012. With excellent repeat hire rate; I developed ERP solutions and web platforms for various magazines and newspapers.
                                             ul.tags
-                                                li Python
-                                                li Flask
-                                                li MySQL
+                                                li.pro Python
+                                                li.pto Flask
+                                                li.int MySQL
                                                 li AWS
-                                                li PHP
+                                                li.int PHP
 
                         section#courses.section
                             h3.head Courses / Certifications
@@ -187,9 +187,9 @@ html(lang="en")
                                 ul.certifications
                                     li
                                         b
-                                            | BigData with
-                                            br
                                             | Apache Spark
+                                            br
+                                            | for Big Data
                                         p Udemy UC-IHZ7NSWV
                                     li
                                         b 
