Added portfolio and education.

--- a/assets/css/BzFTMxc.css
+++ b/assets/css/BzFTMxc.css
@@ -144,6 +144,15 @@ body {
     font-size: 12pt;
   }
 }
+.split .split-even {
+  width: 48%;
+}
+.split .split-even .l {
+  padding-right: 2%;
+}
+.split .split-even .r {
+  padding-left: 2%;
+}
 .split .split-left {
   width: 28%;
   padding-right: 2%;
@@ -370,4 +379,65 @@ ul.certifications li p {
 #interests-chart {
   float: left;
   width: 100%;
+}
+.pb {
+  float: left;
+  width: 100%;
+  border-top: 1px #EEE solid;
+}
+@media print {
+  .pb {
+    border-top: none;
+    page-break-after: always;
+  }
+}
+.portfolio {
+  float: left;
+  width: 94%;
+  padding: 20px 3%;
+}
+@media print {
+  .portfolio {
+    padding: 10px 2%;
+  }
+}
+.portfolio .project {
+  float: left;
+  width: 100%;
+  margin: 14px 0px;
+}
+@media print {
+  .portfolio .project {
+    margin: 7px 0px;
+  }
+}
+.portfolio .project .p {
+  font-weight: bold;
+  font-size: 12pt;
+}
+.portfolio .project .c {
+  color: #777;
+}
+.portfolio .project .d {
+  padding: 5px 0px;
+}
+.portfolio .project .d ul {
+  padding-left: 5%;
+}
+.about {
+  float: left;
+  width: 100%;
+  padding: 10px 0px;
+}
+.about .a {
+  float: left;
+  width: 100%;
+  padding: 5px 0px;
+}
+.about .a b {
+  font-style: italic;
+}
+.about .a p {
+  margin: 0px;
+  padding: 0px;
 }
