--- a/src/less/BzFTMxc.less
+++ b/src/less/BzFTMxc.less
@@ -170,6 +170,16 @@ html, body{
 
 .split{
 
+    .split-even {
+	width: 48%;
+	.l{
+	    padding-right: 2%;
+	}
+	.r{
+	    padding-left: 2%;
+	}
+    }
+
     .split-left {
 	width: 28%;
 	padding-right: 2%;
@@ -440,4 +450,75 @@ ul.certifications{
 #interests-chart {
     float: left;
     width: 100%;
+}
+
+.pb{
+    float: left;
+    width: 100%;
+    border-top: 1px #EEE solid;
+
+    @media print {
+	border-top: none;
+    	page-break-after: always;
+    }
+}
+
+.portfolio{
+    float: left;
+    width: 94%;
+    padding: 20px 3%;
+
+    @media print {
+	padding: 10px 2%;
+    }
+
+    .project{
+	float: left;
+	width: 100%;
+	margin: 14px 0px;
+
+	@media print {
+	    margin: 7px 0px;
+	}
+
+	.p {
+	    font-weight: bold;
+	    font-size: 12pt;
+	}
+
+	.c {
+	    color: #777;
+	}
+
+	.d {
+	    padding: 5px 0px;
+
+	    ul {
+		padding-left: 5%;
+	    }
+	}
+	
+	
+    }
+    
+}
+
+.about{
+    float: left;
+    width: 100%;
+    padding: 10px 0px;
+
+    .a{
+	float: left;
+	width: 100%;
+	padding: 5px 0px;
+
+	b {
+	    font-style: italic;
+	}
+	p {
+	    margin: 0px;
+	    padding: 0px;
+	}
+    }
 }
