--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -44,7 +44,7 @@ html(lang="en")
                     
                     .split-left.fl
                         
-                        section#skills.section
+                        section#skills.section.wb
                             h3.head Technical Skills
                             .content
                                 .sub-section
@@ -105,7 +105,7 @@ html(lang="en")
                     .split-right.fl
 
                         section#experience.section.wb
-                            h3.head Work History
+                            h3.head Work Experience
                             .content
                                 .timeline
                                     .row
@@ -209,6 +209,80 @@ html(lang="en")
                                             br 
                                             | with Python
                                         p Udemy UC-XE5GJLEO
+
+                .pb
+
+                section#portfolio.section.wb
+                    h3.head Portfolio
+                    .content
+                        .portfolio
+                            .project
+                                .p Web Analytics Data Collector
+                                .c Datalicious Pty. Ltd.
+                                .d Datalicious helps optimizing digital media spend and campaigns. To ensure all possible touch points are captured; we have our own web analytics tracker and a data collector. As number clients increased; the response time of data collector went beyond SLA limits. I re-wrote the legacy program in Golang and deployed in multiple regions to keep TTFB less than 50ms.
+                            .project
+                                .p Data Pipelines for OptimaHub
+                                .c Datalicious Pty. Ltd.
+                                .d Important part of my work at Datalicious was to design, implement and scale data pipelines for OptimaHub. The pipeline processes user touchpoint data for analysis and insight using Apache Beam running on Google Dataflow. Data pipelines for the product are modular and re-usable. We utilize configuration files and a schema repository to process data from different clients.
+                            .project
+                                .p Xenonify - IoT Platform
+                                .c https://www.xenonify.com
+                                .d As our team grew at XenonStack; we looked for opportunities within our market. We developed an IoT SaaS platform specifically to serve the upcoming needs of our clients. I played an important role in architecture and implementation of the solution. Successfully served client; working for efficient power utilization.
+                            .project
+                                .p Insurance Fraud Analytics
+                                .c SmartC - Infinilytics Inc.
+                                .d Went into a technology partnership with Infinilytics; developers of patented solution for insurance fraud detection. Lead the offshore development and successfully served two clients for Infinilytics. Also; deployed and maintained HIPAA compliant infrastructure at workplace.
+                            .project
+                                .p Dynamic pricing for storage business
+                                .c SRP Systems Inc.
+                                .d Worked with SRP Systems team to build dynamic pricing model for storage business. Lead the team as a technology partner for implementation of solution designed by Dr. Raju Penmatcha; founder of SRP Systems and a great data scientist
+                            .project
+                                .p PNI Maps (Prototype)
+                                .c Infosys Ltd.
+                                .d Developed a prototype to demonstrate how javascript can be used to render spatial data and manipulate directly on map. Implementation of proposed solution could reduce the usage proprietary softwares by a large part of team and hence, can save considerable cost of licens
+                        .foot Find more projects in my portfolio at https://angel.co/BzFTMxc
+
+                .split.fl.fw
+                    .split-left.fl
+                        section#about.section
+                            h3.head More About Me
+                            .content
+                                .about
+                                    .a
+                                        p I have been
+                                    .a
+                                        b Gender &amp; Date of birth
+                                        p Male . January 25, 1994
+                                    .a
+                                        b Current Location
+                                        p Bengaluru, Karnataka, India
+                        
+                    .split-right.fl
+                        section#education.section
+                            h3.head Education
+                            .timeline
+                                .row
+                                    .time
+                                        .t Aug'13 - Jul'16
+                                        .td B.Tech
+                                        .loc Ludhiana, IN
+                                    .event
+                                        .e Bachelor of Technology - Computer Science &amp; Engineering
+                                        .ec
+                                            | Punjab Technical University
+                                            br
+                                            small Guru Nanak Dev Engineering College
+                                .row
+                                    .time
+                                        .t Aug'10 - Jul'13
+                                        .td Diploma
+                                        .loc Jalandhar, IN
+                                    .event
+                                        .e Diploma in Engineering -  Computer Engineering
+                                        .ec
+                                            | Punjab State Board Of Technical Education
+                                            br
+                                            small Mehr Chand Polytechnic College
                            
         script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/highcharts/5.0.14/highcharts.js')
         script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/highcharts/5.0.14/highcharts-more.js')
