--- a/assets/css/BzFTMxc.css
+++ b/assets/css/BzFTMxc.css
@@ -40,6 +40,14 @@ body {
 .text-right {
   text-align: right;
 }
+.print {
+  display: none !important;
+}
+@media print {
+  .print {
+    display: inline !important;
+  }
+}
 @media print {
   .no-print,
   .no-print * {
@@ -394,7 +402,7 @@ ul.certifications li p {
 .portfolio {
   float: left;
   width: 94%;
-  padding: 20px 3%;
+  padding: 20px 4%;
 }
 @media print {
   .portfolio {
@@ -434,10 +442,38 @@ ul.certifications li p {
   width: 100%;
   padding: 5px 0px;
 }
+@media print {
+  .about .a {
+    padding: 3px 0px;
+  }
+}
 .about .a b {
   font-style: italic;
 }
 .about .a p {
   margin: 0px;
   padding: 0px;
+}
+#footer {
+  border-top: 1px #EEE solid;
+}
+#footer .links {
+  float: left;
+  width: 100%;
+  text-align: center;
+}
+#footer .links a {
+  font-size: 9pt;
+  line-height: 30px;
+  text-decoration: none;
+  margin: 0px 8px;
+  color: #999;
+}
+#footer .links a img {
+  height: 13px;
+  margin-right: 5px;
+}
+#footer .links a:hover {
+  color: #000;
+  text-decoration: underline;
 }
