--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -1,7 +1,7 @@
 doctype html
 html(lang="en")
     head
-        title Abhay Arora - Data Engineering &amp; Backend
+        title Abhay Arora - Data Engineering, Backend &amp; DevOps
         link(href='https://fonts.googleapis.com/css?family=Lato:300,400,400i,700,700i', type='text/css', rel='stylesheet')
         link(href='assets/css/BzFTMxc.min.css', type='text/css', rel='stylesheet')
     body
@@ -249,7 +249,9 @@ html(lang="en")
                             .content
                                 .about
                                     .a
-                                        p I have been
+                                        p
+                                            | I have over 3 years of experience in data engineering and backend development.
+                                            span.no-print  I utilize best practice design patterns and  architecture-centered processes.
                                     .a
                                         b Gender &amp; Date of birth
                                         p Male . January 25, 1994
@@ -283,7 +285,32 @@ html(lang="en")
                                             | Punjab State Board Of Technical Education
                                             br
                                             small Mehr Chand Polytechnic College
-                           
+
+
+                .wrapper
+                    section#footer.section
+                        .content
+                            .links
+                                a(href='mailto:aroraabhay@icloud.com')
+                                    img(src='assets/img/mail.png')
+                                    | aroraabhay@icloud.com
+                                a(href='tel:+919478478470')
+                                    img(src='assets/img/call.png')
+                                    | (+91) 9 478 478 470
+                                a(target='blank', href='https://github.com/BzFTMxc')
+                                    img(src='assets/img/gh.png')
+                                    | https://github.com/BzFTMxc
+                                a(target='blank', href='https://linkedin.com/in/BzFTMxc')
+                                    img(src='assets/img/in.png')
+                                    | https://linkedin.com/in/BzFTMxc
+                                a.no-print(target='blank', href='https://angel.co/BzFTMxc')
+                                    img(src='assets/img/angellist.png')
+                                    | https://angel.co/BzFTMxc
+                                a.no-print(target='blank', href='https://bzftmxc.github.io')
+                                    img(src='assets/img/link.png')
+                                    | https://BzFTMxc.github.io
+
+
         script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/highcharts/5.0.14/highcharts.js')
         script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/highcharts/5.0.14/highcharts-more.js')
         script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/highcharts/5.0.14/js/modules/solid-gauge.js')
